--- a/beranda.html
+++ b/beranda.html
@@ -114,7 +114,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <div class="row gy-4">
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/IMG_5177.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Galeri/kamisan.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
