nambah progam.html kasaran

--- a/beranda.html
+++ b/beranda.html
@@ -100,7 +100,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <h2 data-aos="fade-up" data-aos-delay="100">Informasi<br>Pondok Pesantren ALBERR</h2>
         <p data-aos="fade-up" data-aos-delay="200"></p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-          <a href="about.html" class="btn-get-started">Klik Disini</a>
+          <a href="tentang.html" class="btn-get-started">Klik Disini</a>
         </div>
       </div>
 
