--- a/program.html
+++ b/program.html
@@ -144,7 +144,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <div class="card p-3 shadow-sm h-100">
           <h5>Bahasa Arab</h5>
           <span class="badge bg-danger mb-2">Program Khusus</span>
-          <p>Program Bahasa Arab ALBERR bertujuan membiasakan santri menggunakan bahasa Arab dalam kehidupan sehari-hari melalui metode komunikatif dan praktik langsung (bi'ah Arabiyah). Dengan program ini, santri diharapkan dapat memahami literatur Arab, berbicara, membaca, dan menulis dengan baik sebagai bekal menuntut ilmu dan berdakwah.</p>
+          <p>Program Bahasa Arab ALBERR bertujuan membiasakan santri menggunakan bahasa Arab dalam kehidupan sehari-hari melalui metode komunikatif dan praktik langsung (bi'ah Arabiyah). Dengan program ini, santri diharapkan dapat memahami literatur Arab, berbicara, membaca, dan menulis dengan baik sebagai bekal menuntut ilmu dan berdakwah.git</p>
         </div>
       </div>
 
