--- a/beranda.html
+++ b/beranda.html
@@ -70,7 +70,14 @@ document.addEventListener("DOMContentLoaded", function() {
         <ul>
           <li><a href="beranda.html" class="active">Beranda<br></a></li>
           <li><a href="tentang.html">Tentang</a></li>
-          <li><a href="program.html">Program</a></li>
+          <li class="dropdown"><a><span>Program</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="program.html">Unit Pendidikan</a></li>
+              <li><a href="">Program Khusus</a></li>
+              <li><a href="">Ekstrakulikuler</a></li>
+              <li><a href="">Agenda Santri</a></li>
+            </ul>
+          </li>
           <li><a href="pendaftaran.html">Pendaftaran</a></li>
 
           <li class="dropdown"><a><span>Lainnya</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
