--- a/programkhusus.html
+++ b/programkhusus.html
@@ -72,7 +72,7 @@ document.addEventListener("DOMContentLoaded", function() {
           <li><a href="tentang.html">Tentang</a></li>
           <li class="dropdown"><a><span  class="active">Program</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="program.html">Unit Pendidikan</a></li>
+              <li><a href="unitpendidikan.html">Unit Pendidikan</a></li>
               <li><a href="">Program Khusus</a></li>
               <li><a href="">Ekstrakulikuler</a></li>
               <li><a href="">Agenda Santri</a></li>
@@ -93,93 +93,73 @@ document.addEventListener("DOMContentLoaded", function() {
       </nav>
     </div>
   </header>
-
-
-
-  <main class="main">
-   <section id="program-alberr" class="program section" style="background: linear-gradient(to bottom, #f0f4f8, #ffffff);">
+<section id="program-khusus" class="program-khusus section" style="background: #f0f4f8; padding: 60px 0;">
   <div class="container">
+
     <div class="section-header text-center" data-aos="fade-up">
-      <h2><i class="bi bi-mortarboard"></i> Program Pondok Pesantren AL-BERR</h2>
-      <hr class="mx-auto" style="width:60px; border-top:3px solid #28a745;">
-      <p>Program pendidikan dan kegiatan unggulan santri AL-BERR Pandaan</p>
+      <h2><i class="bi bi-stars"></i> Program Khusus Pondok Pesantren ALBERR</h2>
+      <hr class="mx-auto" style="width: 60px; border-top: 3px solid #28a745;">
+      <p>Program khusus untuk santri ALBERR dalam meningkatkan ilmu, keterampilan, dan hafalan Qur'an sebagai bekal hidup dunia dan akhirat.</p>
     </div>
 
     <div class="row gy-4 mt-4">
 
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>SMP dan SMA ALBERR Pandaan</h5>
-          <span class="badge bg-success mb-2">Unit Pendidikan</span>
-          <p>SMP dan SMA ALBERR Pandaan adalah lembaga pendidikan Islam terpadu yang memadukan ilmu umum dan ilmu agama dengan penekanan pada pembentukan akhlaqul karimah, kedisiplinan, dan keterampilan santri. Dengan kurikulum yang mengintegrasikan ilmu pengetahuan, teknologi, dan nilai-nilai Islami, SMP dan SMA ALBERR hadir untuk mencetak generasi berprestasi yang berilmu, beradab, dan siap menghadapi masa depan dengan bekal ilmu yang kokoh serta akhlak yang mulia di lingkungan pondok yang asri dan kondusif.</p>
+      <!-- Amtsilati -->
+      <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="card shadow-sm h-100">
+          <img src="assets/img/program/amtsilati.jpg" class="card-img-top" alt="Metode Amtsilati">
+          <div class="card-body">
+            <h5 class="card-title">📖 Metode Baca Kitab Kuning Amtsilati</h5>
+            <p class="card-text">Metode cepat membaca kitab kuning yang membantu santri memahami gramatika Arab secara praktis dan menyenangkan untuk kemandirian belajar.</p>
+          </div>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="150">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>Sekolah Tinggi ALBERR</h5>
-          <span class="badge bg-primary mb-2">Unit Pendidikan</span>
-          <p>Sekolah Tinggi ALBERR Pandaan merupakan lembaga pendidikan tinggi Islam yang masih berpusat dari INSIDA Gresik, membuka Fakultas Ekonomi Syariah, Manajemen Bisnis Syariah, Psikologi, dan Pendidikan Agama Islam (PAI). Sekolah Tinggi ini hadir untuk mencetak generasi sarjana yang berilmu, beradab, dan siap menjadi pemimpin umat dengan bekal ilmu pengetahuan, keterampilan, dan akhlaqul karimah sesuai nilai-nilai Islami.</p>
+      <!-- Bahasa Arab -->
+      <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="150">
+        <div class="card shadow-sm h-100">
+          <img src="assets/img/program/bahasa-arab.jpg" class="card-img-top" alt="Program Bahasa Arab">
+          <div class="card-body">
+            <h5 class="card-title">🗣️ Program Bahasa Arab</h5>
+            <p class="card-text">Membiasakan santri berkomunikasi menggunakan bahasa Arab melalui praktik langsung dan lingkungan berbahasa Arab (bi'ah arabiyah) setiap hari.</p>
+          </div>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>🕌 Madrasah Diniyah</h5>
-          <span class="badge bg-warning text-dark mb-2">Unit Pendidikan</span>
-          <p>Madrasah Diniyah Riyadlotul Uqul adalah lembaga pendidikan agama yang berfokus pada penguatan dasar-dasar ilmu agama seperti fiqih, aqidah, dan akhlaq, dengan kurikulum terstruktur sesuai manhaj Ahlussunnah wal Jama'ah. Madrasah ini bertujuan mencetak santri yang berilmu, beradab, dan siap mengamalkan ilmunya dalam kehidupan sehari-hari.</p>
+      <!-- Tahfidhul Qur'an -->
+      <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="card shadow-sm h-100">
+          <img src="assets/img/program/tahfidz.jpg" class="card-img-top" alt="Program Tahfidhul Qur'an">
+          <div class="card-body">
+            <h5 class="card-title">📜 Tahfidhul Qur'an</h5>
+            <p class="card-text">Program tahfidz Al-Qur'an dengan metode talaqqi dan muroja'ah terstruktur, mencetak generasi Qur'ani yang mampu menghafal dan menjaga bacaan Al-Qur'an dengan baik.</p>
+          </div>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="250">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>📖 Madrasah Qur'aniyah Sidogiri</h5>
-          <span class="badge bg-info text-dark mb-2">Unit Pendidikan</span>
-          <p>Madrasah Qur'aniyah Sidogiri adalah program pendidikan tahfidz dan penguatan bacaan Al-Qur’an dengan metode talaqqi, tashih, dan muroja’ah yang terstruktur. Program ini bertujuan mencetak generasi santri yang cinta Al-Qur’an, mampu membaca dengan tartil, dan memiliki hafalan Al-Qur’an sebagai bekal hidup serta amal jariyah sepanjang masa.</p>
+      <!-- BLK Komunitas TIK -->
+      <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="250">
+        <div class="card shadow-sm h-100">
+          <img src="assets/img/program/blk-tik.jpg" class="card-img-top" alt="BLK Komunitas TIK">
+          <div class="card-body">
+            <h5 class="card-title">💻 BLK Komunitas TIK</h5>
+            <p class="card-text">Pelatihan keterampilan teknologi informasi untuk santri dan masyarakat sekitar, mencakup dasar komputer, desain grafis, dan pengelolaan konten digital.</p>
+          </div>
         </div>
       </div>
-
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>Metode Baca Kitab Amtsilati</h5>
-          <span class="badge bg-secondary mb-2">Program Khusus</span>
-          <p>Metode Amtsilati adalah metode cepat baca kitab kuning yang memudahkan santri memahami gramatika Arab (nahwu-shorof) dengan cara praktis dan sistematis, tanpa bergantung pada harakat. Metode ini membantu santri membaca kitab gundul secara mandiri dan memahami kandungan ilmu agama secara mendalam dengan cara yang menyenangkan.</p>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="350">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>Bahasa Arab</h5>
-          <span class="badge bg-danger mb-2">Program Khusus</span>
-          <p>Program Bahasa Arab ALBERR bertujuan membiasakan santri menggunakan bahasa Arab dalam kehidupan sehari-hari melalui metode komunikatif dan praktik langsung (bi'ah Arabiyah). Dengan program ini, santri diharapkan dapat memahami literatur Arab, berbicara, membaca, dan menulis dengan baik sebagai bekal menuntut ilmu dan berdakwah.git</p>
-        </div>
-      </div>
-
-            <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="350">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>📖 Madrasah Qur'aniyah Sidogiri</h5>
-          <span class="badge bg-danger mb-2">Program Khusus</span>
-          <p>Melatih dan mengembangkan potensi santri dalam seni membaca Al-Qur'an dengan baik.</p>
-        </div>
-      </div>
-
-            <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="350">
-        <div class="card p-3 shadow-sm h-100">
-          <h5>📖 Madrasah Qur'aniyah Sidogiri</h5>
-          <span class="badge bg-danger mb-2">Program Khusus</span>
-          <p>Melatih dan mengembangkan potensi santri dalam seni membaca Al-Qur'an dengan baik.</p>
-        </div>
-      </div>
-
 
     </div>
 
-    <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="400">
-      <a href="assets/brosur-alberr.pdf" class="btn btn-success btn-lg"><i class="bi bi-download"></i> Download Brosur PDF</a>
+    <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="300">
+      <a href="pendaftaran.html" class="btn btn-success btn-lg"><i class="bi bi-pencil-square"></i> Daftar Santri Sekarang</a>
     </div>
+
   </div>
 </section>
 
+
+  <main class="main">
+  
 
 
   <footer id="footer" class="footer position-relative light-background">
