--- a/tentang.html
+++ b/tentang.html
@@ -72,7 +72,7 @@ document.addEventListener("DOMContentLoaded", function() {
           <li><a href="tentang.html" class="active">Tentang</a></li>
           <li class="dropdown"><a><span>Program</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="program.html">Unit Pendidikan</a></li>
+              <li><a href="unitpendidikan.html">Unit Pendidikan</a></li>
               <li><a href="">Program Khusus</a></li>
               <li><a href="">Ekstrakulikuler</a></li>
               <li><a href="">Agenda Santri</a></li>
